Sun Aug 17 14:24:09 1997  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (SRCS): Add $(srcdir) where needed.

Wed Jul 16 19:03:18 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* ftpd.M: Fix name of srvtab file to be krb5.keytab.

Wed Feb  5 20:34:38 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Tue Nov 12 00:04:00 1996  Tom Yu  <tlyu@mit.edu>

	* ftpd.c (ftpd_userok): Don't undconditionally return -1.

Thu Nov  7 15:38:51 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* ftpd.c (ftpd_userok): Check return value of krb5_init_context()

Thu Oct 17 23:55:32 1996  Mark Eichin  <eichin@cygnus.com>

	* ftpd.c (auth_data): actually exit the for loop if the ftp key
	was ok.

Mon Oct 14 07:54:17 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* ftpd.c (secure_fprintf): Use STDARG routines if
		present. [krb5-appl/108]

Tue Sep 10 14:07:36 1996  Tom Yu  <tlyu@mit.edu>

	* ftpd.M: remove ".so man1/header.doc"

Mon Jul 29 22:37:05 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Determine sizeof short, int, long for secure.c

Tue Jul 23 23:13:07 1996  Marc Horowitz  <marc@mit.edu>

	* ftpd.c (auth_data): the logic which dealt with multiple acceptor
 	names and fallback was just broken.

Wed Jul 10 16:38:01 1996  Marc Horowitz  <marc@mit.edu>

	* ftpd.c (store), ftpcmd.y (STOR, APPE, STOU): rename store() to
 	store_file() to avoid conflict with dbm store() function
	* ftpd.c (delete), ftpcmd.y (DELE): rename delete() to
 	delete_file() to avoid conflict with the dbm delete() function

Thu Jun 13 18:35:19 1996  Kevin L Mitchell  <klmitch@mit.edu>

	* ftpd.c (authdata): misplaced braces caused server to not be able to
		use ftp principle if it was present.  Client looks for ftp
		first, then tries host; ftpd was looking only for host.

Mon Jun  3 16:12:59 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in, configure.in: back out previous changes and use
		Ezra's patches instead.
