@@ -1,3 +1,7 @@
+Thu Aug 28 23:48:27 1997  Sam Hartman  <hartmans@luminous.mesas.com>
+
+	* ftpd.c (send_file_list): Flush the data before closing it.
+
 Sun Aug 17 14:24:09 1997  Ezra Peisach  <epeisach@mit.edu>
 
 	* Makefile.in (SRCS): Add $(srcdir) where needed.
